@@ -18,25 +18,25 @@
         mvn install:install-file -Dfile=ev3classes.jar -DgroupId=lejos -DartifactId=ev3classes -Dversion=0.8.1 -Dpackaging=jar
         -->
         <dependency>
-            <groupId>lejos</groupId>
-            <artifactId>ev3classes</artifactId>
-            <version>0.9.1</version>
+            <groupId>com.github.bdeneuter</groupId>
+            <artifactId>lejos-ev3-api</artifactId>
+            <version>0.9.1-beta</version>
             <scope>provided</scope>
         </dependency>
         <!--
         mvn install:install-file -Dfile=dbusjava.jar -DgroupId=lejos -DartifactId=dbus -Dversion=0.8.1 -Dpackaging=jar
          -->
         <dependency>
-            <groupId>lejos</groupId>
-            <artifactId>dbus</artifactId>
-            <version>0.9.1</version>
+            <groupId>com.github.bdeneuter</groupId>
+            <artifactId>dbus-java</artifactId>
+            <version>2.7</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <version>2.4.7</version>
+            <artifactId>groovy</artifactId>
+            <version>3.0.23</version>
         </dependency>
 
 
@@ -53,14 +53,14 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>15.0</version>
+            <version>[32.0.0-android,)</version>
         </dependency>
 
         <!-- tests only -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>[4.13.1,)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -92,20 +92,26 @@
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
-            <version>0.7-groovy-2.0</version>
+            <version>2.3-groovy-3.0</version>
             <scope>test</scope>
         </dependency>
         <!-- Optional dependencies for using Spock -->
         <dependency> <!-- enables mocking of classes (in addition to interfaces) -->
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
-            <version>3.1</version>
+            <version>3.3.0</version>
             <scope>test</scope>
         </dependency>
+<!--        <dependency> &lt;!&ndash; enables mocking of classes (in addition to interfaces) &ndash;&gt;-->
+<!--            <groupId>net.bytebuddy</groupId>-->
+<!--            <artifactId>byte-buddy</artifactId>-->
+<!--            <version>1.6.5</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
         <dependency> <!-- enables mocking of classes without default constructor (together with CGLIB) -->
             <groupId>org.objenesis</groupId>
             <artifactId>objenesis</artifactId>
-            <version>2.1</version>
+            <version>2.5.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -113,54 +119,30 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.7</version>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
+                <version>4.1.1</version>
                 <executions>
                     <execution>
-                        <id>compile</id>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <target>
-                                <taskdef name="groovyc" classname="org.codehaus.groovy.ant.Groovyc">
-                                    <classpath refid="maven.compile.classpath" />
-                                </taskdef>
-                                <mkdir dir="${project.build.outputDirectory}" />
-                                <groovyc srcdir="${basedir}/src/main/groovy" destdir="${project.build.outputDirectory}" encoding="UTF8" indy="true">
-                                    <classpath refid="maven.compile.classpath" />
-                                </groovyc>
-                            </target>
-                        </configuration>
                         <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>test-compile</id>
-                        <phase>generate-test-sources</phase>
-                        <configuration>
-                            <target>
-                                <taskdef name="groovyc" classname="org.codehaus.groovy.ant.Groovyc">
-                                    <classpath refid="maven.test.classpath" />
-                                </taskdef>
-                                <mkdir dir="${project.build.testOutputDirectory}" />
-                                <groovyc srcdir="${basedir}/src/test/groovy" destdir="${project.build.testOutputDirectory}" encoding="UTF8" indy="true">
-                                    <classpath refid="maven.test.classpath" />
-                                </groovyc>
-                            </target>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
+                            <goal>addSources</goal>
+                            <goal>addTestSources</goal>
+                            <goal>generateStubs</goal>
+                            <goal>compile</goal>
+                            <goal>generateTestStubs</goal>
+                            <goal>compileTests</goal>
+                            <goal>removeStubs</goal>
+                            <goal>removeTestStubs</goal>
                         </goals>
                     </execution>
                 </executions>
             </plugin>
-
             <!-- to point our java 7 compatibility -->
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <!-- build a runnable jar with dependencies -->
@@ -250,6 +232,15 @@
                         <version>20020829</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <!-- declared to ensure compatibility with test run on JDK 17+ -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
